--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -1,17 +1,33 @@
-.login {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-
-  &-container {
+%login {
+  & {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+}
+
+%button {
+  & {
+    width: 120px;
+    height: 40px;
+    margin-top: 24px;
+    border: none;
+
+    font-weight: 400;
+    font-size: 16px;
+    color: #ffffff;
+  }
+}
+
+.login-root {
+  @extend %login;
+  justify-content: space-between;
+
+  .login-container {
+    @extend %login;
     justify-content: center;
 
     margin-top: 90px;
-    // box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
     border-radius: 3px;
 
     background: #ffffff;
@@ -31,19 +47,13 @@
       border-radius: 3px;
     }
 
-    button {
-      width: 120px;
-      height: 40px;
-      margin-top: 24px;
-      border: none;
+    .button-nor {
+      @extend %button;
       background-color: #d9d9d9;
-
-      font-weight: 400;
-      font-size: 16px;
-      color: #ffffff;
     }
 
-    button:hover {
+    .button-click {
+      @extend %button;
       background-color: #7d9870;
     }
   }
