--- a/src/styles/SearchField.scss
+++ b/src/styles/SearchField.scss
@@ -2,13 +2,13 @@
   & {
     display: flex;
     align-items: center;
-    width: fit-content;
   }
 
   .search-field-input {
     font-size: 12px;
     outline: none;
     border: none;
+    width: 100%;
   }
 
   .search-field-icon {
