--- a/src/styles/ContentsArea.scss
+++ b/src/styles/ContentsArea.scss
@@ -2,14 +2,24 @@
   &-root{
     width: 100%;
     height: 100%;
+
+    &-empty{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      width: 100%;
+    }
   }
 
   &-list{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: calc(100% - 16px);
+    margin-left: 8px;
+    margin-right: 8px;
     .contents-area-video-info{
-      &-list-container{
+      &-container{
         display: flex;
         flex-direction: column;
         width: 100%;
@@ -24,9 +34,11 @@
           display: flex;
           flex-direction: row;
           width: 100%;
+          gap: 5px;
         }
       }
     }
 
   }
+
 }
