[SL-80]feat:그룹사이드바 수정
절대 경로로 변경

--- a/src/styles/GroupButton.scss
+++ b/src/styles/GroupButton.scss
@@ -19,7 +19,7 @@
   }
 }
 .group-focus-tag{
-  background-image: url("../assets/GroupFocusTag.svg");
+  background-image: url("/assets/GroupFocusTag.svg");
   width: 5px;
   height: 56px;
 }
