[SL-52] feat: 게시물 상세 페이지

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,11 @@
 * {
   font-family: 'Noto Sans', sans-serif;
+  box-sizing: border-box;
+}
+
+body {
+  min-height: 100vh;
+  margin: 0 auto;
 }
 
 .App-logo {
