[SL-53]feat:메인화면 페이지 추가
메인 페이지 구현

--- a/src/styles/LeftSideBar.scss
+++ b/src/styles/LeftSideBar.scss
@@ -10,6 +10,7 @@
     width: 125px;
     height: 85px;
     margin: 56px 50px 56px 50px;
+    cursor: pointer;
   }
 
   .group-list{
@@ -20,9 +21,7 @@
 
 
   .group-add-button{
-    background-image: url("../assets/GroupAddButton.svg");
-    width: 40px;
-    height: 40px;
     margin-bottom: 84px;
+    cursor: pointer;
   }
 }
