--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -3,5 +3,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  justify-content: center;
+}
+.app-header-add-content-button-wrapper{
+  margin-left: 14px;
 }
