--- a/src/styles/SearchField.scss
+++ b/src/styles/SearchField.scss
@@ -10,6 +10,7 @@
     outline: none;
     border: none;
     width: 100%;
+
   }
 
   .search-field-icon {
@@ -18,6 +19,7 @@
 
 .search-field-root {
   .search-field-container-bordered {
+    width: 360px;
     border: 1px solid #cccccc;
     border-radius: 2px;
     padding: 4px 8px;
