[SL-52] refactor: css, js 분리

--- a/src/styles/ArticleViewer.scss
+++ b/src/styles/ArticleViewer.scss
@@ -18,6 +18,14 @@
       .article-viewer-video-edit {
         display: flex;
         gap: 8px;
+
+        svg:hover .article-viewer-edit-icon {
+          fill: #f1a468;
+        }
+
+        svg:hover .article-viewer-delete-icon {
+          fill: #f92626;
+        }
       }
 
       .article-viewer-video {
