[SL-84] bug: search-field-input 색깔 통일

--- a/src/styles/SearchField.scss
+++ b/src/styles/SearchField.scss
@@ -10,7 +10,7 @@
     outline: none;
     border: none;
     width: 100%;
-
+    background-color: transparent;
   }
 
   .search-field-icon {
@@ -19,7 +19,6 @@
 
 .search-field-root {
   .search-field-container-bordered {
-    width: 360px;
     border: 1px solid #cccccc;
     border-radius: 2px;
     padding: 4px 8px;
