--- a/src/styles/AddButton.scss
+++ b/src/styles/AddButton.scss
@@ -1,10 +1,10 @@
 .add-button-root {
   background-color: #7d9870;
   border-radius: 2px;
-  width: fit-content;
-  height: fit-content;
 
   .add-button-container {
     cursor: pointer;
+    width: 100%;
+    height: 100%;
   }
 }
