--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,9 +1,15 @@
-.app-header{
+.app-header {
   width: 100%;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
 }
-.app-header-add-content-button-wrapper{
+
+.app-header-add-content-button-wrapper {
   margin-left: 14px;
+
+  .add-button-root {
+    width: 30px;
+    height: 30px;
+  }
 }
