[SL-54] [SL-55] feat: 코드 전체 업로드

--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -28,11 +28,12 @@
     justify-content: center;
 
     margin-top: 90px;
+    margin-bottom: 96px;
     border-radius: 3px;
 
     background: #ffffff;
     width: 608px;
-    height: calc(100vh - 160px);
+    height: 640px;
 
     p {
       font-size: 20px;
