--- a/src/styles/upload.scss
+++ b/src/styles/upload.scss
@@ -15,6 +15,7 @@
 
 %button {
   & {
+    margin-left: 56px;
     width: 120px;
     height: 32px;
     border: none;
@@ -32,11 +33,12 @@
 
   .upload-container {
     margin-top: 90px;
+    margin-bottom: 96px;
     border-radius: 3px;
 
     background: #ffffff;
     width: 608px;
-    height: calc(100vh - 160px);
+    height: 640px;
 
     .close-button {
       margin-top: 24px;
@@ -51,38 +53,6 @@
       margin-bottom: 14px;
       font-weight: 700;
       font-size: 24px;
-    }
-
-    .drop-container {
-      .drop-box {
-        position: relative;
-        margin-left: 56px;
-        width: 496px;
-        height: 149px;
-        background: #f6f7fa;
-        border-radius: 2px;
-
-        .drop-ment1 {
-          position: absolute;
-          margin-top: 63px;
-          margin-left: 143px;
-          font-weight: 400;
-          font-size: 20px;
-        }
-        .drop-ment2 {
-          position: absolute;
-          margin-top: 95px;
-          margin-left: 221px;
-          font-weight: 400;
-          font-size: 16px;
-          color: #a9abb8;
-        }
-        .drop-add {
-          position: absolute;
-          margin-top: 129px;
-          margin-left: 228px;
-        }
-      }
     }
   }
 
@@ -108,6 +78,7 @@
         height: 30px;
         border: 3px solid #f6f7fa;
         border-radius: 2px;
+        font-family: Noto Sans;
       }
     }
     .text-description {
@@ -131,11 +102,15 @@
     flex-direction: row;
     margin-top: 20px;
 
-    .upload-btn {
+    .button-nor {
       @extend %button;
-      margin-left: 56px;
-      height: 32px;
     }
+
+    .button-click {
+      @extend %button;
+      background: #d3e2d0;
+    }
+
     p {
       margin-left: 8px;
       font-weight: 400;
