--- a/src/styles/LeftSideBar.scss
+++ b/src/styles/LeftSideBar.scss
@@ -18,13 +18,42 @@
     display: flex;
     flex-direction: column;
   }
+  .add-group-box{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    position: relative;
+    height: 28px;
+    width: 100%;
+    margin-bottom: 16px;
 
+    &-hidden{
+      display: none;
+    }
+    &-input{
+      width: 100%;
+      height: 28px;
+      background: #729F65;
+      border: none;
+      color: #ffffff;
+      outline: none;
+      padding-left: 10px;
+    }
+    .add-group-box-button{
+      position: absolute;
+      right: 9px;
+      width: 15px;
+      height: 13px;
+      cursor: pointer;
+      background-image: url('../assets/SendBtn.svg');
+    }
+  }
   .group-add-button {
-    background-image: url('../assets/GroupAddButton.svg');
     width: 40px;
     height: 40px;
     margin-bottom: 84px;
     cursor: pointer;
+    background-image: url('../assets/GroupAddButton.svg');
   }
 
   .add-button-root {
