[SL-64, SL-65] feat: Member 검색 mockAPI 연결, Member 추가 mockAPI 연동

--- a/src/styles/MainPage.scss
+++ b/src/styles/MainPage.scss
@@ -1,5 +1,4 @@
-
-.main-page{
+.main-page {
   width: 100%;
   height: 100%;
   display: flex;
@@ -7,28 +6,31 @@
   justify-content: space-between;
 }
 
-.left-side-bar{
-
+.left-side-bar {
+  background-color: white;
 }
 
-.mid-side-bar{
+.mid-side-bar {
   display: flex;
   width: calc(100% - (244px + 275px));
   flex-direction: column;
-  background-color:#F6F6FA;
+  background-color: #f6f6fa;
 
-  .header{
+  .header {
     margin: 16px 16px 42px 16px;
   }
-  .video-list{
+
+  .video-list {
     height: 100%;
     overflow: scroll;
   }
-  .video-list::-webkit-scrollbar{
-    display:none;
+
+  .video-list::-webkit-scrollbar {
+    display: none;
   }
 }
 
-.right-side-bar{
+.right-side-bar {
   width: 275px;
+  background-color: white;
 }
