[SL-64] bug: 멤버 추가 시 검색 결과 창이 오버레이 되도록 수정

--- a/src/styles/MemberSideBar.scss
+++ b/src/styles/MemberSideBar.scss
@@ -4,6 +4,12 @@
   padding-top: 96px;
 
   .member-side-bar-search-field-container {
+    position: relative;
+
+    .member-side-bar-search-result {
+      position: absolute;
+      width: 100%;
+    }
   }
 
   .member-side-bar-member-list-container {
