[NO-ISSUE] feat: dropzone에 addbutton 컴포넌트 추가

--- a/src/styles/Dropzone.scss
+++ b/src/styles/Dropzone.scss
@@ -41,12 +41,13 @@
     font-size: 16px;
     color: #a9abb8;
   }
-  button {
+  .drop-add-button-wrapper {
     margin-top: 129px;
     margin-left: 228px;
-    background-image: url('../assets/AddBtn.png');
     border: none;
-    width: 40px;
-    height: 40px;
+    .add-button-root {
+      width: 40px;
+      height: 40px;
+    }
   }
 }
