Revert "[SL-136] feat: streaming video from src"
This reverts commit f6b8bdb9672c5d21d6a85b698e51c2d4b1a775fb.

--- a/src/styles/Video.scss
+++ b/src/styles/Video.scss
@@ -1,4 +1,7 @@
 .video-root {
-  .video-player {
+  .video-container {
+    .video-player {
+      background-image: url('http://via.placeholder.com/1280x720');
+    }
   }
 }
