--- a/src/styles/ArticleViewer.scss
+++ b/src/styles/ArticleViewer.scss
@@ -30,6 +30,7 @@
 
       .article-viewer-video {
         border-radius: 3px;
+        background-color: #cccccc;
         max-width: 772px;
         max-height: 416px;
         width: 772px;
