[SL-188] feat: closed btn 클릭 시 메인 화면으로 이동

--- a/src/styles/Upload.scss
+++ b/src/styles/Upload.scss
@@ -23,6 +23,7 @@
     font-weight: 400;
     font-size: 12px;
     color: #000000;
+    cursor: pointer;
   }
 }
 
@@ -45,6 +46,7 @@
       margin-left: 560px;
       width: 16px;
       height: 16px;
+      cursor: pointer;
     }
 
     .upload-ment {
@@ -124,6 +126,7 @@
       font-weight: 400;
       font-size: 12px;
       color: #f1a468;
+      cursor: pointer;
     }
   }
 }
