[NO-ISSUE] change: css 수정 및 간단한 변경 사항

--- a/src/styles/MainPage.scss
+++ b/src/styles/MainPage.scss
@@ -12,7 +12,7 @@
 
 .mid-side-bar {
   display: flex;
-  width: calc(100% - (244px + 275px));
+  width: 100%;
   flex-direction: column;
   background-color: #f6f6fa;
 
@@ -31,6 +31,6 @@
 }
 
 .right-side-bar {
-  width: 275px;
   background-color: white;
+  min-width: 250px;
 }
