--- a/src/styles/VideoInfo.scss
+++ b/src/styles/VideoInfo.scss
@@ -1,14 +1,15 @@
-.video-info{
-  &-root{
+.video-info {
+  &-root {
     width: 100%;
     display: flex;
     flex-direction: column;
   }
-  &-thumbnail{
-    img{
-      width: 300px;
-      height: 187px;
-    }
 
+  &-thumbnail {
+    img {
+      border-radius: 10px;
+      width: 300px;
+      height: 169px;
+    }
   }
 }
