Revert "[NO-ISSUE] change: css 수정 및 간단한 변경 사항"
This reverts commit 478652590a9a6619cfd0866b54865807b9104e9f.

--- a/src/styles/MainPage.scss
+++ b/src/styles/MainPage.scss
@@ -12,7 +12,7 @@
 
 .mid-side-bar {
   display: flex;
-  width: 100%;
+  width: calc(100% - (244px + 275px));
   flex-direction: column;
   background-color: #f6f6fa;
 
@@ -31,6 +31,6 @@
 }
 
 .right-side-bar {
+  width: 275px;
   background-color: white;
-  min-width: 250px;
 }
