--- a/src/styles/ContentsArea.scss
+++ b/src/styles/ContentsArea.scss
@@ -1,9 +1,9 @@
-.contents-area {
-  &-root {
+.contents-area{
+  &-root{
     width: 100%;
     height: 100%;
 
-    &-empty {
+    &-empty{
       display: flex;
       align-items: center;
       justify-content: center;
@@ -12,35 +12,32 @@
     }
   }
 
-  &-list {
+  &-list{
     display: flex;
     flex-direction: column;
-    padding: 0 16px;
+    width: calc(100% - 16px);
+    margin-left: 8px;
+    margin-right: 8px;
 
-    .contents-area-video-info {
-      &-list-container-title {
+    .contents-area-video-info{
+      &-list-container-title{
         margin-bottom: 15px;
         font-weight: 700;
       }
-
-      &-container {
+      &-container{
         display: flex;
         flex-direction: column;
         width: 100%;
         margin: 16px 0;
-
-        &-info-wrapper {
+        &-info-wrapper{
           display: flex;
           flex-direction: row;
           justify-content: space-between;
-
-          .contents-area-video-list-wrapper-view-all:hover {
-            cursor: pointer;
-          }
+          width: 100%;
         }
 
         //얘는 임시임
-        .video-info-list-container {
+        .video-info-list-container{
           display: flex;
           flex-direction: row;
           width: 100%;
@@ -48,9 +45,8 @@
         }
       }
     }
-
-    .hr {
-      border: solid 1px #cccccc;
+    .hr{
+      border:solid 1px #CCCCCC ;
       width: 100%;
     }
   }
