--- a/src/styles/VideoInfo.scss
+++ b/src/styles/VideoInfo.scss
@@ -5,10 +5,18 @@
     flex-direction: column;
   }
   &-thumbnail{
+    width: 300px;
+    height: 187px;
+
+    border: solid 1px lightgray;
+    border-radius: 8px;
+    text-align: center;
+    background: lightgray;
+
     img{
       width: 300px;
-      height: 187px;
     }
 
   }
 }
+
