--- a/src/styles/VideoInfo.scss
+++ b/src/styles/VideoInfo.scss
@@ -8,13 +8,15 @@
     width: 300px;
     height: 187px;
 
-    border: solid 1px lightgray;
+    border: solid 1px black;
     border-radius: 8px;
     text-align: center;
-    background: lightgray;
+    background: black;
 
     img{
+      width: 300px;
       height: 187px;
+      object-fit: contain;
     }
 
   }
