[NO-ISSUE] feat : 로그아웃, 삭제 버튼 활성화, 메인 타이틀 명 변경

--- a/src/styles/MemberSideBar.scss
+++ b/src/styles/MemberSideBar.scss
@@ -24,4 +24,10 @@
       margin-top: 8px;
     }
   }
+  .logout-button{
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    cursor: pointer;
+  }
 }
